# mealfeels

./: Dockerfile  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
mealfeels/: __init__.py  auth.py  db.py  home.py  schema.sql  textbelt.py  tracking.py  twilio.py
mealfeels/static/: style.css
mealfeels/templates/: base.html  index.html
mealfeels/templates/auth/: login.html  setup_encryption.html  verify.html
mealfeels/templates/home/: index.html  symptoms.html
tests/: clear.sql  local_dev.py  seed.sql  test.sh
